--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "zod": "^4.3.5"
   },
   "devDependencies": {
+    "@better-auth/cli": "^1.4.17",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/pg": "^8.16.0",
