--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@prisma/extension-accelerate": "^3.0.1",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "bcryptjs": "^3.0.3",
     "better-auth": "^1.4.13",
